[#3073] feat: Axon Framework 5 Test Fixture - AxonTestPhase - remove wildcard for consumer/predicate assertions in order for better code completion